# simpleregistry

./: README.md  pyproject.toml
.github/workflows/: pypi_upload.yml  tests.yml
src/pyreg/: __init__.py  base.py  exceptions.py
src/pyreg/adapters/: __init__.py  pyreg_dataclasses.py  pyreg_pydantic.py
src/simpleregistry/: base.py
tests/: conftest.py  test_base.py  test_config_check.py  test_dataclasses.py  test_pydantic.py  test_python_data_model.py  test_readme.py  test_register_instance.py  test_registry_constraints.py  test_registry_queries.py
tests/test_adapters/: test_dataclasses.py  test_pydantic.py
